# Fractal-IFS

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  notes.txt  readme.md
engine/: camera.cpp  camera.h  engine.cpp  engine.h  utils.cpp  utils.h
shaders/: CMakeLists.txt  instancedifsvert.glsl  testcomp.glsl  vert.glsl
utils/: shader.cpp  shader.hpp
